src/test/resources/regressions/features/sequences/seq-literal-fail8.gobra
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

package pkg

requires 0 == n
func foo(ghost n int) {
  // error: keys must be constant
  //:: ExpectedOutput(type_error)
  ghost xs := seq[int] { n : 10 }
}
